--- a/website/templates/studentchangepassword.html
+++ b/website/templates/studentchangepassword.html
@@ -44,7 +44,7 @@ crossorigin="anonymous"
             <div class="container">
                 <div class="container">
 
-                    <form action = '/teacherchangepassword' method= 'POST'> 
+                    <form action = '/studentchangepassword' method= 'POST'> 
                         <div class="form-group">
                             
                             <input type="email" class="form-control" id="email"
@@ -66,7 +66,7 @@ crossorigin="anonymous"
         
             <ul>
                 <li>
-                    <a href="{{url_for('views.teacherdashboard')}}">
+                    <a href="{{url_for('views.studentdashboard')}}">
                         <i class="fa fa-home fa-2x"></i>
                         <span class="nav-text">
                            Home
@@ -76,7 +76,7 @@ crossorigin="anonymous"
                 </li>
                 
                <li class="has-subnav">
-                    <a href="{{url_for('views.teachereditdashboard')}}">
+                    <a href="{{url_for('views.studenteditdashboard')}}">
                         <i class="fa fa-edit fa-2x"></i>
                         <span class="nav-text">
                             Edit details
@@ -93,24 +93,12 @@ crossorigin="anonymous"
                     </a>
                     
                 </li>
-                <li class="has-subnav">
-                    <a href="{{url_for('views.studentverification')}}">
-                       <i class="fa fa-user fa-2x"></i>
-                        <span class="nav-text">
-                            Student Verification
-                        </span>
-                    </a>
+                
                     
-                </li>
-                <li class="has-subnav">
-                    <a href="{{url_for('views.uploadanswersheet')}}">
-                       <i class="fa fa-upload fa-2x"></i>
-                        <span class="nav-text">
-                            Upload answer sheet
-                        </span>
-                    </a>
+                
+              
                    
-                </li>
+             
                 <!--li>
                     <a href="#">
                         <i class="fa fa-film fa-2x"></i>
@@ -155,7 +143,7 @@ crossorigin="anonymous"
             
             <ul class="logout">
                 <li>
-                   <a href="{{url_for('auth.teacherlogout')}}">
+                   <a href="{{url_for('auth.studentlogout')}}">
                          <i class="fa fa-power-off fa-2x"></i>
                         <span class="nav-text">
                             Logout
