--- a/website/templates/approvestudent.html
+++ b/website/templates/approvestudent.html
@@ -75,7 +75,7 @@ crossorigin="anonymous"
                     </a>
                 </li>
                 <li class="has-subnav">
-                    <a href=>
+                    <a href="{{url_for('views.uploadanswersheet')}}">
                        <i class="fa fa-upload fa-2x"></i>
                         <span class="nav-text">
                             Upload answer sheet
