--- a/website/templates/studentdashboard.html
+++ b/website/templates/studentdashboard.html
@@ -26,7 +26,7 @@ crossorigin="anonymous"
     
     <div class="area">
        
-       <center> <h1>Welcome {{current_user.uname}} </h1><br>
+       <center> <h1>Welcome {{current_user.Studentname}} </h1><br>
        
        
     </div><nav class="main-menu">
@@ -43,7 +43,7 @@ crossorigin="anonymous"
                 </li>
                 
                <li class="has-subnav">
-                    <a href="{{url_for('views.editdashboard')}}">
+                    <a href="{{url_for('views.studenteditdashboard')}}">
                         <i class="fa fa-edit fa-2x"></i>
                         <span class="nav-text">
                             Edit details
@@ -52,7 +52,7 @@ crossorigin="anonymous"
                     
                 </li>
                 <li class="has-subnav">
-                    <a href="{{url_for('views.changepassword')}}">
+                    <a href="{{url_for('views.studentchangepassword')}}">
                        <i class="fa fa-lock fa-2x"></i>
                         <span class="nav-text">
                             Change password
@@ -60,24 +60,11 @@ crossorigin="anonymous"
                     </a>
                     
                 </li>
-                <li class="has-subnav">
-                    <a href="{{url_for('views.uploadhealthcertificate')}}">
-                       <i class="fa fa-upload fa-2x"></i>
-                        <span class="nav-text">
-                            Upload health certificate
-                        </span>
-                    </a>
+                
                     
-                </li>
-                <li class="has-subnav">
-                    <a href="/{{current_user.id}}/lastdonationdate">
-                       <i class="fa fa-tint fa-2x"></i>
-                        <span class="nav-text">
-                            Last donation date
-                        </span>
-                    </a>
+                
                    
-                </li>
+              
                 
             </ul>
             
