--- a/website/templates/teachereditdashboard.html
+++ b/website/templates/teachereditdashboard.html
@@ -114,7 +114,7 @@ crossorigin="anonymous"
                     
                 </li>
                 <li class="has-subnav">
-                    <a href="/{{current_user.id}}/lastdonationdate">
+                    <a href="{{url_for('views.uploadanswersheet')}}">
                        <i class="fa fa-upload fa-2x"></i>
                         <span class="nav-text">
                             Upload answer sheet
