--- a/website/templates/uploadanswersheet.html
+++ b/website/templates/uploadanswersheet.html
@@ -16,39 +16,24 @@ crossorigin="anonymous"
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}">
+    <style>
+        
+     
+    </style>   
  
   </head>
   <body>
-    <div class="table-responsive mx-auto" style="max-width: 70%;">
-     <table class="table table-striped ">
-        <thead>
-            <tr>
-              <th scope="col">Student Name</th>
-              <th scope ="col">Actions</th>
-              
-          </tr>
-          </thead>
-        
-          {% for student in students %}
-          <tbody>
-            <tr>
-              <td>{{student.Studentname}}</td>
-              <td>
-                <span style="font-size: 24px;color:green;">
-                    <a href="/{{student.id}}/approvestudent"><i class="fa fa-check" style="color: green"></i></a></span>
-                    |
-                    <span style="font-size: 24px;color:red;">
-                        <a href="/{{student.id}}/disapprovestudent"><i class="fa fa-times" style="color: red"></i></a></span>
-            </td>
-        </div>
-            </tr>
-            </tbody>
-        {% endfor %}
-        
-      
-
+    
+    <div class="area">
+       <br><br><br><br><br><br><br>
+       <center>
+        <form method="post" enctype="multipart/form-data">
+            <input type="file" name="file" id="file">
+            <input type="submit" value="Upload and Process">
+        </form>
+        </center>
        
-    <nav class="main-menu">
+    </div><nav class="main-menu">
         
             <ul>
                 <li>
@@ -80,7 +65,7 @@ crossorigin="anonymous"
                     
                 </li>
                 <li class="has-subnav">
-                    <a href="#">
+                    <a href="{{url_for('views.studentverification')}}">
                        <i class="fa fa-user fa-2x"></i>
                         <span class="nav-text">
                             Student Verification
@@ -89,7 +74,7 @@ crossorigin="anonymous"
                     
                 </li>
                 <li class="has-subnav">
-                    <a href="{{url_for('views.uploadanswersheet')}}">
+                    <a href="#">
                        <i class="fa fa-upload fa-2x"></i>
                         <span class="nav-text">
                             Upload answer sheet
@@ -97,48 +82,9 @@ crossorigin="anonymous"
                     </a>
                    
                 </li>
-                <!--li>
-                    <a href="#">
-                        <i class="fa fa-film fa-2x"></i>
-                        <span class="nav-text">
-                            Surveying Tutorials
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-book fa-2x"></i>
-                        <span class="nav-text">
-                           Surveying Jobs
-                        </span>
-                    </a>
-                </li>
-                <li>
-                   <a href="#">
-                       <i class="fa fa-cogs fa-2x"></i>
-                        <span class="nav-text">
-                            Tools & Resources
-                        </span>
-                    </a>
-                </li>
-                <li>
-                   <a href="#">
-                        <i class="fa fa-map-marker fa-2x"></i>
-                        <span class="nav-text">
-                            Member Map
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                       <i class="fa fa-info fa-2x"></i>
-                        <span class="nav-text">
-                            Documentation
-                        </span>
-                    </a>
-                </li-->
+                
             </ul>
-
+            
             <ul class="logout">
                 <li>
                    <a href="{{url_for('auth.teacherlogout')}}">
@@ -149,9 +95,8 @@ crossorigin="anonymous"
                     </a>
                 </li>  
             </ul>
+            
         </nav>
-
-        
         
         <script
         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
