--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,11 +29,10 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="studentlogin" href="/studentlogin">Student Login</a>
-          <a class="nav-item nav-link" id="teacherlogin" href="/teacherlogin">Teacher Login</a>
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="studentregister" href="/studentregister">Student Register</a>
           <a class="nav-item nav-link" id="teacherregister" href="/teacherregister">Teacher Register</a>
-          <a class="nav-item nav-link" id="adminlogin" href="/adminlogin">Admin Login</a>
+          
           
       </div>
       </div>
