--- a/website/templates/teacherchangepassword.html
+++ b/website/templates/teacherchangepassword.html
@@ -48,7 +48,7 @@ crossorigin="anonymous"
                         <div class="form-group">
                             
                             <input type="email" class="form-control" id="email"
-                                placeholder="Enter Email" name="email" value="{{current_user.Email}}" hidden>
+                                placeholder="Enter Email" name="email" value="{{current_user.email}}" hidden>
                         </div>  
                         <div class="form-group"> 
                             <label for="teacherpassword">Password</label> 
@@ -155,7 +155,7 @@ crossorigin="anonymous"
             
             <ul class="logout">
                 <li>
-                   <a href="{{url_for('auth.teacherlogout')}}">
+                   <a href="{{url_for('auth.logout')}}">
                          <i class="fa fa-power-off fa-2x"></i>
                         <span class="nav-text">
                             Logout
