--- a/website/templates/teacherverification.html
+++ b/website/templates/teacherverification.html
@@ -52,7 +52,7 @@ crossorigin="anonymous"
                     
                 </li>
                 <li class="has-subnav">
-                    <a href="#">
+                    <a href="{{url_for('views.changeadminpassword')}}">
                        <i class="fa fa-lock fa-2x"></i>
                         <span class="nav-text">
                             Change password
@@ -61,7 +61,7 @@ crossorigin="anonymous"
                     
                 </li>
                 <li class="has-subnav">
-                    <a href="{{url_for('views.teacherverification')}}">
+                    <a href="#">
                        <i class="fa fa-user fa-2x"></i>
                         <span class="nav-text">
                             Teacher Verification
