--- a/website/templates/uploadanswersheet.html
+++ b/website/templates/uploadanswersheet.html
@@ -87,7 +87,7 @@ crossorigin="anonymous"
             
             <ul class="logout">
                 <li>
-                   <a href="{{url_for('auth.teacherlogout')}}">
+                   <a href="{{url_for('auth.logout')}}">
                          <i class="fa fa-power-off fa-2x"></i>
                         <span class="nav-text">
                             Logout
