--- a/website/templates/admineditdashboard.html
+++ b/website/templates/admineditdashboard.html
@@ -14,93 +14,20 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
 crossorigin="anonymous"
 />
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Admin dashboard</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}">
- <style>
-    * {
+    <style>
         
-        font-family: sans-serif;
-    }
-    .content-table {
-        border-collapse: collapse;
-        margin: 25px 0;
-        font-size: 1.2em;
-        min-width: 400px;
-        border-radius: 5px 5px 0 0;
-        overflow: hidden;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    }
-    
-    .content-table thead tr {
-        background-color: #009879;
-        color: #ffffff;
-        text-align: left;
-        font-weight: bold;
-    }
-    
-    .content-table th,
-    .content-table td {
-        padding: 12px 15px;
-    }
-    
-    .content-table tbody tr {
-        border-bottom: 1px solid #dddddd;
-    }
-    
-    .content-table tbody tr:nth-of-type(even) {
-        background-color: #f3f3f3;
-    }
-    
-    .content-table tbody tr:last-of-type {
-        border-bottom: 2px solid #009879;
-    }
-    
-    .content-table tbody tr.active-row {
-        font-weight: bold;
-        color: #009879;
-    }
- </style>   
+     
+    </style>   
+ 
   </head>
   <body>
     
     <div class="area">
-       <br><center>
-       <table class="content-table">
-            <thead>
-                <tr>
-            <th>Name</th>
-            <th>DOB</th>
-            <th>Sex</th>
-            <th>Blood group</th>
-            <th>Address</th>
-            <th>City</th>
-            <th>Email</th>
-            <th>Contact</th>
-            <th>Action</th>        
-                </tr>
-            </thead>       
-            {% for donor in donors %}
-            <tbody>
-            <tr>
-                <td>{{donor.uname}}</td>
-                <td>{{donor.dob.date()}}</td>
-                <td>{{donor.sex}}</td>
-                <td>{{donor.bloodgroup}}</td>
-                <td>{{donor.address}}</td>
-                <td>{{donor.city}}</td>
-                <td>{{donor.email}}</td>
-                <td>{{donor.contact}}</td>
-                <td>
-                    <span style="font-size: 24px;color:green;">
-                        <a href="/{{donor.id}}/edituser"><i class="fa fa-edit"></i></a></span>
-                        |
-                        <span style="font-size: 24px;color:red;">
-                            <a href="/{{donor.id}}/deleteuser"><i class="fa fa-trash"></i></a></span>
-                </td>
-            </tr>
-            </tbody>
-            {% endfor %}
-        </table>
+       
+       <center> <h1>Welcome {{current_user.name}} </h1><br>
+    
        
     </div><nav class="main-menu">
         
@@ -109,7 +36,7 @@ crossorigin="anonymous"
                     <a href="{{url_for('views.admindashboard')}}">
                         <i class="fa fa-home fa-2x"></i>
                         <span class="nav-text">
-                           Detail
+                           Home
                         </span>
                     </a>
                   
@@ -119,7 +46,7 @@ crossorigin="anonymous"
                     <a href="#">
                         <i class="fa fa-edit fa-2x"></i>
                         <span class="nav-text">
-                            Edit donors
+                            Edit details
                         </span>
                     </a>
                     
@@ -131,73 +58,27 @@ crossorigin="anonymous"
                             Change password
                         </span>
                     </a>
+                    
                 </li>
                 <li class="has-subnav">
-                    <a href="{{url_for('views.addadmin')}}">
-                       <i class="fa fa-user-plus fa-2x"></i>
+                    <a href="{{url_for('views.teacherverification')}}">
+                       <i class="fa fa-user fa-2x"></i>
                         <span class="nav-text">
-                            Add admins
-                        </span>
-                    </a>
-                </li>
-                <li class="has-subnav">
-                    <a href="#">
-                       <i class="fa fa-check fa-2x"></i>
-                        <span class="nav-text">
-                            Verify health certificate
+                            Teacher Verification
                         </span>
                     </a>
                     
                 </li>
-                <!--li class="has-subnav">
-                    <a href="#">
-                       <i class="fa fa-tint fa-2x"></i>
+                <li class="has-subnav">
+                    <a href="{{url_for('views.addadmin')}}">
+                       <i class="fa fa-upload fa-2x"></i>
                         <span class="nav-text">
-                            Last donation date
+                            Add Admin
                         </span>
                     </a>
                    
-                </li-->
-                <!--li>
-                    <a href="#">
-                        <i class="fa fa-film fa-2x"></i>
-                        <span class="nav-text">
-                            Surveying Tutorials
-                        </span>
-                    </a>
                 </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-book fa-2x"></i>
-                        <span class="nav-text">
-                           Surveying Jobs
-                        </span>
-                    </a>
-                </li>
-                <li>
-                   <a href="#">
-                       <i class="fa fa-cogs fa-2x"></i>
-                        <span class="nav-text">
-                            Tools & Resources
-                        </span>
-                    </a>
-                </li>
-                <li>
-                   <a href="#">
-                        <i class="fa fa-map-marker fa-2x"></i>
-                        <span class="nav-text">
-                            Member Map
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                       <i class="fa fa-info fa-2x"></i>
-                        <span class="nav-text">
-                            Documentation
-                        </span>
-                    </a>
-                </li-->
+                
             </ul>
             
             <ul class="logout">
