--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -147,19 +147,19 @@
                 <i class="fa fa-id-card-o" aria-hidden="true"></i>
             </div>
             <div class="col-lg-12 login-title">
-                Teacher Login
+                Login
             </div>
 
             <div class="col-lg-12 login-form">
                 <div class="col-lg-12 login-form">
                     <form method="POST">
                         <div class="form-group">
-                            <label class="form-control-label">Teacher Email</label>
-                            <input type="text" name="teacherloginemail" class="form-control">
+                            <label class="form-control-label">Email</label>
+                            <input type="text" name="loginemail" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label class="form-control-label">Teacher Password</label>
-                            <input type="password" name="teacherloginpassword" class="form-control" >
+                            <label class="form-control-label">Password</label>
+                            <input type="password" name="loginpassword" class="form-control" >
                         </div>
 
                         <div class="col-lg-12 loginbttm">
