--- a/website/templates/studentchangepassword.html
+++ b/website/templates/studentchangepassword.html
@@ -48,15 +48,15 @@ crossorigin="anonymous"
                         <div class="form-group">
                             
                             <input type="email" class="form-control" id="email"
-                                placeholder="Enter Email" name="email" value="{{current_user.Email}}" hidden>
+                                placeholder="Enter Email" name="email" value="{{current_user.email}}" hidden>
                         </div>  
                         <div class="form-group"> 
-                            <label for="teacherpassword">Password</label> 
-                            <input type="password" class="form-control" id="teacherpassword" placeholder="Enter the new password" name="teacherpassword"> 
+                            <label for="password">Password</label> 
+                            <input type="password" class="form-control" id="studentpassword" placeholder="Enter the new password" name="studentpassword"> 
                         </div> 
                         <div class="form-group"> 
                             <label for="password">Confirm Password</label> 
-                            <input type="password" class="form-control" id="teacherpassword1" placeholder="Confirm new Password" name="teacherpassword1"> 
+                            <input type="password" class="form-control" id="studentpassword1" placeholder="Confirm new Password" name="studentpassword1"> 
                         </div>
 
                         <button type="submit" class="btn bg-success"> Update </button>
@@ -143,7 +143,7 @@ crossorigin="anonymous"
             
             <ul class="logout">
                 <li>
-                   <a href="{{url_for('auth.studentlogout')}}">
+                   <a href="{{url_for('auth.logout')}}">
                          <i class="fa fa-power-off fa-2x"></i>
                         <span class="nav-text">
                             Logout
