--- a/website/templates/teacherdashboard.html
+++ b/website/templates/teacherdashboard.html
@@ -26,7 +26,7 @@ crossorigin="anonymous"
     
     <div class="area">
        
-       <center> <h1>Welcome {{current_user.Teachername}} </h1><br>
+       <center> <h1>Welcome {{current_user.name}} </h1><br>
     
        
     </div><nav class="main-menu">
@@ -83,7 +83,7 @@ crossorigin="anonymous"
             
             <ul class="logout">
                 <li>
-                   <a href="{{url_for('auth.teacherlogout')}}">
+                   <a href="{{url_for('auth.logout')}}">
                          <i class="fa fa-power-off fa-2x"></i>
                         <span class="nav-text">
                             Logout
