--- a/website/templates/admindashboard.html
+++ b/website/templates/admindashboard.html
@@ -71,7 +71,7 @@ crossorigin="anonymous"
                 </li>
                 <li class="has-subnav">
                     <a href="{{url_for('views.addadmin')}}">
-                       <i class="fa fa-upload fa-2x"></i>
+                       <i class="fa fa-user-plus fa-2x"></i>
                         <span class="nav-text">
                             Add Admin
                         </span>
