--- a/website/templates/addadmin.html
+++ b/website/templates/addadmin.html
@@ -14,121 +14,29 @@ href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min
 crossorigin="anonymous"
 />
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Admin dashboard</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}">
-
-</head>
+    <style>
+        
+     
+    </style>   
+ 
+  </head>
   <body>
-    <center>
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-        messages %} {% for category, message in messages %} {% if category ==
-        'error' %}
-        <div class="alert alert-danger alter-dismissable fade show" role="alert">
-          {{ message }}
-          <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        {% else %}
-        <div class="alert alert-success alter-dismissable fade show" role="alert">
-          {{ message }}
-          <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        {% endif %} {% endfor %} {% endif %} {% endwith %}
-    </center>
     
     <div class="area">
-        <div class="container">
-            <form action = '/addadmin' method= 'POST'>
-                <div class="form-group">
-                    <label for="username">User Name</label>
-                    <input type="text" class="form-control" id="uname"
-                        placeholder="Enter User Name" name="uname">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password"
-                        placeholder="Enter the password" name="password">
-                </div>
-                <div class="form-group">
-                    <label for="password">Confirm Password</label>
-                    <input type="password" class="form-control" id="password1"
-                        placeholder="Confirm Password" name="password1">
-                </div>
-                <div class="form-group">
-                    <label for="dob">Date of birth</label>
-                    <input type="date" class="form-control" id="dob"
-                        placeholder = "Enter the Date of birth" name="dob">
-                </div>  
-             <div class="form-group">
-                <label for="sex" >Sex</label> 
-                <select for="sex" class="form-control" name="sex">
-            <option value = "Select" class="form-control">Select  
-            </option>  
-            <option value = "male" class="form-control"> Male   
-            </option>  
-            <option value = "female" class="form-control"> Female  
-            </option>  
-            <option value = "others" class="form-control"> others
-            </option>  
-              </select>      
-              <div class="form-group">
-                <label for="bloodgroup" >bloodgroup</label> 
-                <select for="bloodgroup" class="form-control" name="bloodgroup">
-            <option value = "Select" class="form-control">Select  
-            </option>  
-            <option value = "A+" class="form-control"> A+   
-            </option>  
-            <option value = "A-" class="form-control"> A- 
-            </option>  
-            <option value = "B+" class="form-control"> B+
-            </option> 
-            <option value = "B-" class="form-control"> B-
-            </option> 
-            <option value = "O+" class="form-control"> O+
-            </option> 
-            <option value = "O-" class="form-control"> O-
-            </option> 
-            <option value = "AB+" class="form-control"> AB+
-            </option> 
-            <option value = "AB-" class="form-control"> AB-
-            </option> 
-              </select>   
-              <div class="form-group">
-                <label for="address">Address</label>
-                <textarea class="form-control" id="address"
-                    placeholder="Enter Address" name="address">
-                </textarea>
-            </div>  
-            <div class="form-group">
-                <label for="city">City</label>
-                <input type="text" class="form-control" id="city"
-                    placeholder="Enter City" name="city">
-            </div> 
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email"
-                    placeholder="Enter Email" name="email">
-            </div>  
-                <div class="form-group">
-                    <label for="contact">Contact No</label>
-                    <input type="text" class="form-control" id="contact"
-                        placeholder="Enter Contact Number" name="contact">
-                </div>
-              <button type="submit" class="btn bg-success">
-                    Register
-                </button>
-            </form>
-       </div><nav class="main-menu">
+       
+       <center> <h1>Welcome {{current_user.name}} </h1><br>
+    
+       
+    </div><nav class="main-menu">
         
             <ul>
                 <li>
                     <a href="{{url_for('views.admindashboard')}}">
                         <i class="fa fa-home fa-2x"></i>
                         <span class="nav-text">
-                           Detail
+                           Home
                         </span>
                     </a>
                   
@@ -138,7 +46,7 @@ crossorigin="anonymous"
                     <a href="{{url_for('views.admineditdashboard')}}">
                         <i class="fa fa-edit fa-2x"></i>
                         <span class="nav-text">
-                            Edit donors
+                            Edit details
                         </span>
                     </a>
                     
@@ -153,71 +61,24 @@ crossorigin="anonymous"
                     
                 </li>
                 <li class="has-subnav">
-                    <a href="#">
-                       <i class="fa fa-user-plus fa-2x"></i>
+                    <a href="{{url_for('views.teacherverification')}}">
+                       <i class="fa fa-user fa-2x"></i>
                         <span class="nav-text">
-                            Add admins
-                        </span>
-                    </a>
-                </li>
-                <li class="has-subnav">
-                    <a href="#">
-                       <i class="fa fa-check fa-2x"></i>
-                        <span class="nav-text">
-                            Verify health certificate
+                            Teacher Verification
                         </span>
                     </a>
                     
                 </li>
-                <!--li class="has-subnav">
+                <li class="has-subnav">
                     <a href="#">
-                       <i class="fa fa-tint fa-2x"></i>
+                       <i class="fa fa-user-plus fa2x"></i>
                         <span class="nav-text">
-                            Last donation date
+                            Add Admin
                         </span>
                     </a>
                    
-                </li-->
-                <!--li>
-                    <a href="#">
-                        <i class="fa fa-film fa-2x"></i>
-                        <span class="nav-text">
-                            Surveying Tutorials
-                        </span>
-                    </a>
                 </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-book fa-2x"></i>
-                        <span class="nav-text">
-                           Surveying Jobs
-                        </span>
-                    </a>
-                </li>
-                <li>
-                   <a href="#">
-                       <i class="fa fa-cogs fa-2x"></i>
-                        <span class="nav-text">
-                            Tools & Resources
-                        </span>
-                    </a>
-                </li>
-                <li>
-                   <a href="#">
-                        <i class="fa fa-map-marker fa-2x"></i>
-                        <span class="nav-text">
-                            Member Map
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                       <i class="fa fa-info fa-2x"></i>
-                        <span class="nav-text">
-                            Documentation
-                        </span>
-                    </a>
-                </li-->
+                
             </ul>
             
             <ul class="logout">
