--- a/website/templates/changeadminpassword.html
+++ b/website/templates/changeadminpassword.html
@@ -16,17 +16,53 @@ crossorigin="anonymous"
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}">
-    <style>
-        
      
-    </style>   
  
   </head>
   <body>
     
     <div class="area">
        
-       <center> <h1>Welcome {{current_user.name}} </h1><br>
+        <center>
+            {% with messages = get_flashed_messages(with_categories=true) %} {% if
+                messages %} {% for category, message in messages %} {% if category ==
+                'error' %}
+                <div class="alert alert-danger alter-dismissable fade show" role="alert">
+                  {{ message }}
+                  <button type="button" class="close" data-dismiss="alert">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                {% else %}
+                <div class="alert alert-success alter-dismissable fade show" role="alert">
+                  {{ message }}
+                  <button type="button" class="close" data-dismiss="alert">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                {% endif %} {% endfor %} {% endif %} {% endwith %}
+                </center>
+            <div class="container">
+                <div class="container">
+                    <div class="container">
+    
+                        <form action = '/changeadminpassword' method= 'POST'> 
+                            <div class="form-group">
+                                
+                                <input type="email" class="form-control" id="email"
+                                    placeholder="Enter Email" name="email" value="{{current_user.email}}" hidden>
+                            </div>  
+                            <div class="form-group"> 
+                                <label for="password">Password</label> 
+                                <input type="password" class="form-control" id="adminpassword" placeholder="Enter the new password" name="adminpassword"> 
+                            </div> 
+                            <div class="form-group"> 
+                                <label for="password">Confirm Password</label> 
+                                <input type="password" class="form-control" id="adminpassword1" placeholder="Confirm new Password" name="adminpassword1"> 
+                            </div>
+    
+                            <button type="submit" class="btn bg-success"> Update </button>
+                         </form> 
     
        
     </div><nav class="main-menu">
@@ -71,7 +107,7 @@ crossorigin="anonymous"
                 </li>
                 <li class="has-subnav">
                     <a href="{{url_for('views.addadmin')}}">
-                       <i class="fa fa-upload fa-2x"></i>
+                       <i class="fa fa-user-plus fa-2x"></i>
                         <span class="nav-text">
                             Add Admin
                         </span>
