--- a/website/templates/uploadanswersheet.html
+++ b/website/templates/uploadanswersheet.html
@@ -30,9 +30,24 @@ crossorigin="anonymous"
         <form method="post" enctype="multipart/form-data">
             <input type="file" name="file" id="file">
             <input type="submit" value="Upload and Process">
+            <br><br>
+            <div class="form-group">
+                <label for="username">Key Point</label>
+                <input type="text" class="form-control" id="keypoints"
+                    placeholder="Enter key point" name="keypoints">
+            </div>
         </form>
+        
         </center>
        
+        
+    <style>
+        .form-group{
+            max-width: 800px; /* Set the maximum width for the area */
+            margin: 0 auto; /* Center the area horizontally */
+            padding: 0 15px; /* Add padding to the area */
+        }
+    </style>
     </div><nav class="main-menu">
         
             <ul>
