--- a/website/templates/studentchangepassword.html
+++ b/website/templates/studentchangepassword.html
@@ -94,7 +94,15 @@ crossorigin="anonymous"
                     
                 </li>
                 
+                <li class="has-subnav">
+                    <a href="{{url_for('views.studentviewmark')}}">
+                       <i class="fa fa-eye fa-2x"></i>
+                        <span class="nav-text">
+                            View mark
+                        </span>
+                    </a>
                     
+                </li>
                 
               
                    
