--- a/website/templates/addadmin.html
+++ b/website/templates/addadmin.html
@@ -24,10 +24,58 @@ crossorigin="anonymous"
   </head>
   <body>
     
+    
     <div class="area">
        
-       <center> <h1>Welcome {{current_user.name}} </h1><br>
-    
+       
+            <center>
+            {% with messages = get_flashed_messages(with_categories=true) %} {% if
+                messages %} {% for category, message in messages %} {% if category ==
+                'error' %}
+                <div class="alert alert-danger alter-dismissable fade show" role="alert">
+                  {{ message }}
+                  <button type="button" class="close" data-dismiss="alert">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                {% else %}
+                <div class="alert alert-success alter-dismissable fade show" role="alert">
+                  {{ message }}
+                  <button type="button" class="close" data-dismiss="alert">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                {% endif %} {% endfor %} {% endif %} {% endwith %}
+                </center>
+   
+        <div class="container mt-5">
+            <h2>Add Admin</h2>
+            <form action="/addadmin" method="POST">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="sex">Sex:</label>
+                    <select class="form-control" id="sex" name="sex">
+                        <option value="" disabled selected>Select your option</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <input type="hidden" name="role" value="2"> <!-- Hidden field for role -->
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
        
     </div><nav class="main-menu">
         
@@ -93,6 +141,8 @@ crossorigin="anonymous"
             </ul>
             
         </nav>
+        
+    
         
         <script
         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
