--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,8 +30,15 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="studentregister" href="/studentregister">Student Register</a>
-          <a class="nav-item nav-link" id="teacherregister" href="/teacherregister">Teacher Register</a>
+          <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Registration
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/studentregister">Student Registration</a>
+                <a class="dropdown-item" href="/teacherregister">Teacher Registration</a>
+            </div>
+        </div>
           
           
       </div>
