--- a/website/templates/studenteditdashboard.html
+++ b/website/templates/studenteditdashboard.html
@@ -133,6 +133,15 @@ crossorigin="anonymous"
                     </a>
                     
                 </li>
+                <li class="has-subnav">
+                    <a href="{{url_for('views.studentviewmark')}}">
+                       <i class="fa fa-eye fa-2x"></i>
+                        <span class="nav-text">
+                            View mark
+                        </span>
+                    </a>
+                    
+                </li>
                 
                 <!--li>
                     <a href="#">
