--- a/website/templates/uploadanswersheet.html
+++ b/website/templates/uploadanswersheet.html
@@ -26,8 +26,39 @@ crossorigin="anonymous"
     
     <div class="area">
        <br><br><br><br><br><br><br>
+        
+            <center>
+                {% with messages = get_flashed_messages(with_categories=true) %} {% if
+                    messages %} {% for category, message in messages %} {% if category ==
+                    'error' %}
+                    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+                      {{ message }}
+                      <button type="button" class="close" data-dismiss="alert">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    {% else %}
+                    <div class="alert alert-success alter-dismissable fade show" role="alert">
+                      {{ message }}
+                      <button type="button" class="close" data-dismiss="alert">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    {% endif %} {% endfor %} {% endif %} {% endwith %}
+                    </center>
+        
        <center>
         <form method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label for="email">Student email</label>
+                <input type="text" class="form-control" id="email"
+                    placeholder="Enter student Email" name="email">
+            </div>
+            <div class="form-group">
+            <label for="subject">Subject Name</label>
+                <input type="text" class="form-control" id="subject"
+                    placeholder="Enter Subject Name" name="subject">
+            </div><br>
             <input type="file" name="file" id="file">
             <input type="submit" value="Upload and Process">
             <br><br>
